@@ -10,12 +10,19 @@ import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.AbstractMap;
 import java.util.ArrayList;
+import java.util.Collections;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 
 import org.jboss.logging.Logger;
 
+import io.quarkus.bootstrap.json.JsonArray;
+import io.quarkus.bootstrap.json.JsonObject;
+import io.quarkus.bootstrap.json.JsonReader;
+import io.quarkus.bootstrap.json.JsonString;
+import io.quarkus.bootstrap.json.JsonValue;
 import io.quarkus.container.image.deployment.ContainerImageConfig;
 import io.quarkus.container.image.deployment.util.NativeBinaryUtil;
 import io.quarkus.container.spi.ContainerImageBuildRequestBuildItem;
@@ -30,7 +37,8 @@ import io.quarkus.deployment.pkg.builditem.ArtifactResultBuildItem;
 import io.quarkus.deployment.pkg.builditem.NativeImageBuildItem;
 import io.quarkus.deployment.pkg.builditem.OutputTargetBuildItem;
 import io.quarkus.deployment.util.ContainerRuntimeUtil.ContainerRuntime;
-import io.quarkus.deployment.util.ExecUtil;
+import io.smallrye.common.process.ProcessBuilder;
+import io.smallrye.common.process.ProcessExecutionException;
 
 public abstract class CommonProcessor<C extends CommonConfig> {
     private static final Logger LOGGER = Logger.getLogger(CommonProcessor.class);
@@ -87,17 +95,104 @@ public abstract class CommonProcessor<C extends CommonConfig> {
             var builtContainerImage = createContainerImage(containerImageConfig, config, containerImageInfo, out,
                     dockerfilePaths, buildContainerImage, pushContainerImage, packageConfig, executableName);
 
+            Optional<BuiltContainerInfo> maybeBuiltContainerInfo = determineBuiltContainerInfo(executableName,
+                    builtContainerImage);
+            String workingDirectory = null;
+            if (maybeBuiltContainerInfo.isPresent()) {
+                workingDirectory = maybeBuiltContainerInfo.get().effectiveWorkingDirectory();
+            }
+
             // a pull is not required when using this image locally because the strategy always builds the container image
             // locally before pushing it to the registry
+            Map<String, String> metadata = new HashMap<>();
+            metadata.put("container-image", builtContainerImage);
+            metadata.put("pull-required", "false");
+            if (workingDirectory != null) {
+                metadata.put("working-directory", workingDirectory);
+            }
+            metadata.put("output-directory", out.getOutputDirectory().toAbsolutePath().toString());
             artifactResultProducer.produce(
                     new ArtifactResultBuildItem(
                             null,
                             "jar-container",
-                            Map.of(
-                                    "container-image", builtContainerImage,
-                                    "pull-required", "false")));
+                            Collections.unmodifiableMap(metadata)));
 
             containerImageBuilder.produce(new ContainerImageBuilderBuildItem(getProcessorImplementation()));
+        }
+    }
+
+    private Optional<BuiltContainerInfo> determineBuiltContainerInfo(String executableName, String builtContainerImage) {
+        try {
+            StringBuffer sb = new StringBuffer();
+            ProcessBuilder.newBuilder(executableName)
+                    .arguments(List.of("inspect", builtContainerImage))
+                    .error().logOnSuccess(false).inherited()
+                    .output().consumeLinesWith(8092, sb::append)
+                    .run();
+
+            JsonArray results = JsonReader.of(sb.toString()).read();
+            JsonObject imageData = (JsonObject) results.value().get(0);
+
+            JsonObject config = imageData.get("Config");
+
+            List<String> entrypoints = new ArrayList<>();
+            JsonValue entrypointValue = config.get("Entrypoint");
+            if (entrypointValue instanceof JsonArray entrypointArray) {
+                entrypointArray.value().forEach(entrypoint -> {
+                    if (entrypoint instanceof JsonString s) {
+                        entrypoints.add(s.value());
+                    }
+                });
+            }
+
+            String workingDir = null;
+            JsonValue workingDirVal = config.get("WorkingDir");
+            if (workingDirVal instanceof JsonString js) {
+                workingDir = js.value();
+            }
+
+            Optional<String> baseImage = Optional.empty();
+
+            JsonValue labelsVal = config.get("Labels");
+            if (labelsVal instanceof JsonObject labels) {
+                JsonValue baseNameLabelObj = labels.get("org.opencontainers.image.base.name");
+                if (baseNameLabelObj instanceof JsonString s) {
+                    baseImage = Optional.of(s.value());
+                } else {
+                    JsonValue nameObj = labels.get("name");
+                    JsonValue versionObj = labels.get("version");
+                    if ((nameObj instanceof JsonString n) && (versionObj instanceof JsonString v)) {
+                        baseImage = Optional.of(n.value() + ":" + v.value());
+                    }
+                }
+            }
+
+            return Optional.of(new BuiltContainerInfo(baseImage, entrypoints, workingDir));
+        } catch (ProcessExecutionException e) {
+            LOGGER.warnf("Error while inspecting built container image %s", executableName);
+            return Optional.empty();
+        }
+    }
+
+    private record BuiltContainerInfo(Optional<String> baseImage, List<String> entrypoint, String workingDirectory) {
+
+        private boolean isUbiOpenJdkImage() {
+            if (baseImage.isPresent()) {
+                String baseImageVal = baseImage().get();
+                if (baseImageVal.contains("ubi") && baseImageVal.contains("openjdk")) {
+                    if (!entrypoint.isEmpty()) {
+                        return entrypoint.get(0).endsWith("run-java.sh");
+                    }
+                }
+            }
+            return false;
+        }
+
+        private String effectiveWorkingDirectory() {
+            if (isUbiOpenJdkImage()) {
+                return "/deployments";
+            }
+            return workingDirectory;
         }
     }
 
@@ -164,13 +259,11 @@ public abstract class CommonProcessor<C extends CommonConfig> {
 
         // Check if we need to login first
         if (containerImageConfig.username().isPresent() && containerImageConfig.password().isPresent()) {
-            var loginSuccessful = ExecUtil.exec(executableName, "login", registry, "-u", containerImageConfig.username().get(),
-                    "-p", containerImageConfig.password().get());
-
-            if (!loginSuccessful) {
-                throw containerRuntimeException(executableName,
-                        new String[] { "-u", containerImageConfig.username().get(), "-p", "********" });
-            }
+            ProcessBuilder.newBuilder(executableName)
+                    .arguments("login", registry, "-u", containerImageConfig.username().get(), "-p",
+                            containerImageConfig.password().get())
+                    .error().logOnSuccess(false).inherited()
+                    .run();
         }
     }
 
@@ -203,11 +296,9 @@ public abstract class CommonProcessor<C extends CommonConfig> {
                 .map(additionalTag -> new String[] { "tag", image, additionalTag })
                 .forEach(tagArgs -> {
                     LOGGER.infof("Running '%s %s'", executableName, String.join(" ", tagArgs));
-                    var tagSuccessful = ExecUtil.exec(executableName, tagArgs);
-
-                    if (!tagSuccessful) {
-                        throw containerRuntimeException(executableName, tagArgs);
-                    }
+                    ProcessBuilder.newBuilder(executableName).arguments(tagArgs)
+                            .error().logOnSuccess(false).inherited()
+                            .run();
                 });
     }
 
@@ -221,13 +312,9 @@ public abstract class CommonProcessor<C extends CommonConfig> {
     }
 
     protected void pushImage(String image, String executableName, C config) {
-        String[] pushArgs = createPushArgs(image, config);
-        var pushSuccessful = ExecUtil.exec(executableName, pushArgs);
-
-        if (!pushSuccessful) {
-            throw containerRuntimeException(executableName, pushArgs);
-        }
-
+        ProcessBuilder.newBuilder(executableName).arguments(createPushArgs(image, config))
+                .error().logOnSuccess(false).inherited()
+                .run();
         LOGGER.infof("Successfully pushed %s image %s", getProcessorImplementation(), image);
     }
 
@@ -243,11 +330,11 @@ public abstract class CommonProcessor<C extends CommonConfig> {
 
         LOGGER.infof("Executing the following command to build image: '%s %s'", executableName,
                 String.join(" ", args));
-        var buildSuccessful = ExecUtil.exec(out.getOutputDirectory().toFile(), executableName, args);
-
-        if (!buildSuccessful) {
-            throw containerRuntimeException(executableName, args);
-        }
+        ProcessBuilder.newBuilder(executableName)
+                .directory(out.getOutputDirectory())
+                .arguments(args)
+                .error().logOnSuccess(false).inherited()
+                .run();
 
         if (createAdditionalTags && !containerImageInfo.getAdditionalImageTags().isEmpty()) {
             createAdditionalTags(containerImageInfo.getImage(), containerImageInfo.getAdditionalImageTags(),
