@@ -3,6 +3,8 @@ package io.quarkus.resteasy.reactive.server.deployment;
 import static io.quarkus.resteasy.reactive.common.deployment.QuarkusResteasyReactiveDotNames.HTTP_SERVER_REQUEST;
 import static io.quarkus.resteasy.reactive.common.deployment.QuarkusResteasyReactiveDotNames.HTTP_SERVER_RESPONSE;
 import static io.quarkus.resteasy.reactive.common.deployment.QuarkusResteasyReactiveDotNames.ROUTING_CONTEXT;
+import static io.quarkus.security.spi.SecurityTransformer.AuthorizationType.AUTHORIZATION_POLICY;
+import static io.quarkus.security.spi.SecurityTransformer.AuthorizationType.SECURITY_CHECK;
 import static io.quarkus.vertx.http.deployment.EagerSecurityInterceptorMethodsBuildItem.collectInterceptedMethods;
 import static java.util.stream.Collectors.toList;
 import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.DATE_FORMAT;
@@ -132,6 +134,7 @@ import io.quarkus.arc.deployment.BeanContainerBuildItem;
 import io.quarkus.arc.deployment.BeanDiscoveryFinishedBuildItem;
 import io.quarkus.arc.deployment.GeneratedBeanBuildItem;
 import io.quarkus.arc.deployment.UnremovableBeanBuildItem;
+import io.quarkus.arc.processor.KotlinUtils;
 import io.quarkus.arc.runtime.BeanContainer;
 import io.quarkus.deployment.Capabilities;
 import io.quarkus.deployment.Capability;
@@ -178,7 +181,6 @@ import io.quarkus.resteasy.reactive.server.runtime.QuarkusServerPathBodyHandler;
 import io.quarkus.resteasy.reactive.server.runtime.ResteasyReactiveInitialiser;
 import io.quarkus.resteasy.reactive.server.runtime.ResteasyReactiveRecorder;
 import io.quarkus.resteasy.reactive.server.runtime.ResteasyReactiveRuntimeRecorder;
-import io.quarkus.resteasy.reactive.server.runtime.ResteasyReactiveServerRuntimeConfig;
 import io.quarkus.resteasy.reactive.server.runtime.StandardSecurityCheckInterceptor;
 import io.quarkus.resteasy.reactive.server.runtime.exceptionmappers.AuthenticationCompletionExceptionMapper;
 import io.quarkus.resteasy.reactive.server.runtime.exceptionmappers.AuthenticationFailedExceptionMapper;
@@ -200,6 +202,7 @@ import io.quarkus.resteasy.reactive.server.spi.MethodScannerBuildItem;
 import io.quarkus.resteasy.reactive.server.spi.NonBlockingReturnTypeBuildItem;
 import io.quarkus.resteasy.reactive.server.spi.PreExceptionMapperHandlerBuildItem;
 import io.quarkus.resteasy.reactive.server.spi.ResumeOn404BuildItem;
+import io.quarkus.resteasy.reactive.server.spi.TargetJavaVersionBuildItem;
 import io.quarkus.resteasy.reactive.spi.CustomExceptionMapperBuildItem;
 import io.quarkus.resteasy.reactive.spi.DynamicFeatureBuildItem;
 import io.quarkus.resteasy.reactive.spi.EndpointValidationPredicatesBuildItem;
@@ -217,15 +220,15 @@ import io.quarkus.security.AuthenticationFailedException;
 import io.quarkus.security.AuthenticationRedirectException;
 import io.quarkus.security.ForbiddenException;
 import io.quarkus.security.spi.PermissionsAllowedMetaAnnotationBuildItem;
-import io.quarkus.security.spi.SecurityTransformerUtils;
-import io.quarkus.vertx.http.deployment.AuthorizationPolicyInstancesBuildItem;
+import io.quarkus.security.spi.SecurityTransformer;
+import io.quarkus.security.spi.SecurityTransformerBuildItem;
 import io.quarkus.vertx.http.deployment.EagerSecurityInterceptorMethodsBuildItem;
 import io.quarkus.vertx.http.deployment.FilterBuildItem;
-import io.quarkus.vertx.http.deployment.HttpSecurityUtils;
 import io.quarkus.vertx.http.deployment.RouteBuildItem;
 import io.quarkus.vertx.http.runtime.RouteConstants;
 import io.quarkus.vertx.http.runtime.VertxHttpBuildTimeConfig;
 import io.quarkus.vertx.http.runtime.security.JaxRsPathMatchingHttpSecurityPolicy;
+import io.quarkus.vertx.http.runtime.security.SecurityHandlerPriorities;
 import io.vertx.core.Handler;
 import io.vertx.core.http.HttpServerRequest;
 import io.vertx.core.http.HttpServerResponse;
@@ -476,7 +479,8 @@ public class ResteasyReactiveProcessor {
             Capabilities capabilities,
             Optional<AllowNotRestParametersBuildItem> allowNotRestParametersBuildItem,
             List<EndpointValidationPredicatesBuildItem> validationPredicatesBuildItems,
-            List<GeneratedJaxRsResourceBuildItem> generatedJaxRsResourcesBuildItems) {
+            List<GeneratedJaxRsResourceBuildItem> generatedJaxRsResourcesBuildItems,
+            Optional<TargetJavaVersionBuildItem> maybeTargetJavaVersionBuildItem) {
 
         if (!resourceScanningResultBuildItem.isPresent()) {
             // no detected @Path, bail out
@@ -617,7 +621,9 @@ public class ResteasyReactiveProcessor {
                                             .source(source + " > " + parameterType.name().toString())
                                             .build());
                                 }
-                                if (parameterType.name().equals(FILE)) {
+                                DotName paramTypeName = parameterType.name();
+                                if (paramTypeName.equals(FILE)
+                                        || paramTypeName.equals(ResteasyReactiveDotNames.SSE_EVENT_SINK)) {
                                     paramsRequireReflection = true;
                                     break;
 
@@ -660,27 +666,8 @@ public class ResteasyReactiveProcessor {
                     .setApplicationClassPredicate(applicationClassPredicate)
                     .setValidateEndpoint(validationPredicatesBuildItems.stream().map(item -> item.getPredicate())
                             .collect(Collectors.toUnmodifiableList()))
-                    .setTargetJavaVersion(new TargetJavaVersion() {
-
-                        private final Status result;
-
-                        {
-                            CompiledJavaVersionBuildItem.JavaVersion.Status status = compiledJavaVersionBuildItem
-                                    .getJavaVersion().isJava19OrHigher();
-                            if (status == CompiledJavaVersionBuildItem.JavaVersion.Status.FALSE) {
-                                result = Status.FALSE;
-                            } else if (status == CompiledJavaVersionBuildItem.JavaVersion.Status.TRUE) {
-                                result = Status.TRUE;
-                            } else {
-                                result = Status.UNKNOWN;
-                            }
-                        }
-
-                        @Override
-                        public Status isJava19OrHigher() {
-                            return result;
-                        }
-                    })
+                    .setTargetJavaVersion(
+                            determineTargetJavaVersion(compiledJavaVersionBuildItem, maybeTargetJavaVersionBuildItem))
                     .setIsDisabledCreator(new Function<>() {
                         @Override
                         public Supplier<Boolean> apply(ClassInfo classInfo) {
@@ -739,9 +726,13 @@ public class ResteasyReactiveProcessor {
 
             checkForDuplicateEndpoint(config, allServerMethods);
 
-            Function<Type, DotName> typeToReturnName = new Function<Type, DotName>() {
+            Function<MethodInfo, DotName> methodToReturnName = new Function<MethodInfo, DotName>() {
                 @Override
-                public DotName apply(Type type) {
+                public DotName apply(MethodInfo method) {
+                    var type = method.returnType();
+                    if (type.name().equals(DotName.OBJECT_NAME) && KotlinUtils.isKotlinSuspendMethod(method)) {
+                        type = KotlinUtils.getKotlinSuspendMethodResult(method);
+                    }
                     DotName typeName = type.name();
                     if (type.kind() == Type.Kind.CLASS) {
                         return typeName;
@@ -757,6 +748,19 @@ public class ResteasyReactiveProcessor {
                 }
             };
 
+            // Provides a predicate for filtering classes/methods that have annotations from one of the client
+            // packages. This only reduces the false positives as a "base" interface could be derived and
+            // client-related annotation applies. Although it seems unlikely that an endpoint without any
+            // client annotations violates the specification for server resources methods; this type of false
+            // positive would only mean needless processing as there would be no exception thrown.
+            Predicate<AnnotationInstance> knownClientAnnotation = new Predicate<AnnotationInstance>() {
+                public boolean test(AnnotationInstance ann) {
+                    return ann.name().packagePrefix().startsWith("io.quarkus.rest.client") ||
+                            ann.name().packagePrefix().startsWith("org.eclipse.microprofile.rest.client") ||
+                            ann.name().packagePrefix().startsWith("org.jboss.resteasy.reactive.client");
+                }
+            };
+
             Map<DotName, Set<DotName>> returnsBySubResources = new HashMap<>();
             //now index possible sub resources. These are all classes that have method annotations
             //that are not annotated @Path
@@ -765,8 +769,16 @@ public class ResteasyReactiveProcessor {
                     MethodInfo method = instance.target().asMethod();
                     ClassInfo classInfo = method.declaringClass();
 
+                    // Reject known client interfaces (See predicate above)
+                    if (classInfo.asClass().declaredAnnotations().stream().anyMatch(knownClientAnnotation)
+                            || method.annotations().stream().anyMatch(knownClientAnnotation)
+                            || method.parameters().stream().flatMap(p -> p.annotations().stream())
+                                    .anyMatch(knownClientAnnotation)) {
+                        continue;
+                    }
+
                     returnsBySubResources.computeIfAbsent(classInfo.name(), ignored -> new HashSet<>())
-                            .add(typeToReturnName.apply(method.returnType()));
+                            .add(methodToReturnName.apply(method));
                 }
             }
             //sub resources can also have just a path annotation
@@ -776,8 +788,16 @@ public class ResteasyReactiveProcessor {
                     MethodInfo method = instance.target().asMethod();
                     ClassInfo classInfo = method.declaringClass();
 
+                    // Reject known client interfaces (See predicate above)
+                    if (classInfo.asClass().declaredAnnotations().stream().anyMatch(knownClientAnnotation)
+                            || method.annotations().stream().anyMatch(knownClientAnnotation)
+                            || method.parameters().stream().flatMap(p -> p.annotations().stream())
+                                    .anyMatch(knownClientAnnotation)) {
+                        continue;
+                    }
+
                     returnsBySubResources.computeIfAbsent(classInfo.name(), ignored -> new HashSet<>())
-                            .add(typeToReturnName.apply(method.returnType()));
+                            .add(methodToReturnName.apply(method));
                 }
             }
 
@@ -892,6 +912,35 @@ public class ResteasyReactiveProcessor {
         }
 
         handleDateFormatReflection(reflectiveClassBuildItemBuildProducer, index);
+    }
+
+    private static TargetJavaVersion determineTargetJavaVersion(CompiledJavaVersionBuildItem compiledJavaVersionBuildItem,
+            Optional<TargetJavaVersionBuildItem> maybeTargetJavaVersionBuildItem) {
+        if (maybeTargetJavaVersionBuildItem.isPresent()) {
+            return maybeTargetJavaVersionBuildItem.get().getTargetJavaVersion();
+        } else {
+            return new TargetJavaVersion() {
+
+                private final Status result;
+
+                {
+                    CompiledJavaVersionBuildItem.JavaVersion.Status status = compiledJavaVersionBuildItem
+                            .getJavaVersion().isJava19OrHigher();
+                    if (status == CompiledJavaVersionBuildItem.JavaVersion.Status.FALSE) {
+                        result = Status.FALSE;
+                    } else if (status == CompiledJavaVersionBuildItem.JavaVersion.Status.TRUE) {
+                        result = Status.TRUE;
+                    } else {
+                        result = Status.UNKNOWN;
+                    }
+                }
+
+                @Override
+                public Status isJava19OrHigher() {
+                    return result;
+                }
+            };
+        }
     }
 
     // TODO: this is really just a hackish way of allowing the use of @Mock so we might need something better
@@ -1555,9 +1604,9 @@ public class ResteasyReactiveProcessor {
         if (preExceptionMapperHandlerBuildItems.size() == 1) {
             return preExceptionMapperHandlerBuildItems.get(0).getHandler();
         }
-        Collections.sort(preExceptionMapperHandlerBuildItems);
         return new DelegatingServerRestHandler(preExceptionMapperHandlerBuildItems.stream()
-                .map(PreExceptionMapperHandlerBuildItem::getHandler).collect(toList()));
+                .sorted()
+                .map(PreExceptionMapperHandlerBuildItem::getHandler).toList());
     }
 
     private static boolean notFoundCustomExMapper(String builtInExSignature, String builtInMapperSignature,
@@ -1588,7 +1637,7 @@ public class ResteasyReactiveProcessor {
         // replace default auth failure handler added by vertx-http so that our exception mappers can customize response
         return new FilterBuildItem(
                 recorder.defaultAuthFailureHandler(deployment.getDeployment(), observabilityIntegrationBuildItem.isPresent()),
-                FilterBuildItem.AUTHENTICATION - 1);
+                SecurityHandlerPriorities.AUTHENTICATION - 1);
     }
 
     private void checkForDuplicateEndpoint(ResteasyReactiveConfig config, Map<String, List<EndpointConfig>> allMethods) {
@@ -1673,13 +1722,12 @@ public class ResteasyReactiveProcessor {
     @Record(ExecutionTime.RUNTIME_INIT)
     public void runtimeConfiguration(ResteasyReactiveRuntimeRecorder recorder,
             Optional<ResteasyReactiveDeploymentBuildItem> deployment,
-            ResteasyReactiveServerRuntimeConfig resteasyReactiveServerRuntimeConf,
             BuildProducer<HandlerConfigurationProviderBuildItem> producer) {
         if (deployment.isEmpty()) {
             return;
         }
         producer.produce(new HandlerConfigurationProviderBuildItem(RuntimeConfiguration.class,
-                recorder.runtimeConfiguration(deployment.get().getDeployment(), resteasyReactiveServerRuntimeConf)));
+                recorder.runtimeConfiguration(deployment.get().getDeployment())));
     }
 
     @BuildStep
@@ -1718,13 +1766,14 @@ public class ResteasyReactiveProcessor {
 
     @BuildStep
     MethodScannerBuildItem integrateEagerSecurity(Capabilities capabilities, CombinedIndexBuildItem indexBuildItem,
-            Optional<AuthorizationPolicyInstancesBuildItem> authorizationPolicyInstancesItemOpt,
             List<EagerSecurityInterceptorMethodsBuildItem> eagerSecurityInterceptors, JaxRsSecurityConfig securityConfig,
-            Optional<PermissionsAllowedMetaAnnotationBuildItem> permsAllowedMetaAnnotationItemOptional) {
+            Optional<PermissionsAllowedMetaAnnotationBuildItem> permsAllowedMetaAnnotationItemOptional,
+            Optional<SecurityTransformerBuildItem> securityTransformerBuildItem) {
         if (!capabilities.isPresent(Capability.SECURITY)) {
             return null;
         }
-        var authZPolicyInstancesItem = authorizationPolicyInstancesItemOpt.get();
+        SecurityTransformer securityTransformer = SecurityTransformerBuildItem.createSecurityTransformer(
+                indexBuildItem.getIndex(), securityTransformerBuildItem);
         var permsAllowedMetaAnnotationItem = permsAllowedMetaAnnotationItemOptional.get();
 
         final boolean applySecurityInterceptors = !eagerSecurityInterceptors.isEmpty();
@@ -1737,35 +1786,53 @@ public class ResteasyReactiveProcessor {
             public List<HandlerChainCustomizer> scan(MethodInfo method, ClassInfo actualEndpointClass,
                     Map<String, Object> methodContext) {
                 var endpointImpl = ServerEndpointIndexer.findEndpointImplementation(method, actualEndpointClass, index);
-                boolean applyAuthorizationPolicy = shouldApplyAuthZPolicy(method, endpointImpl, authZPolicyInstancesItem);
+                boolean applyAuthorizationPolicy = shouldApplyAuthZPolicy(method, endpointImpl, securityTransformer);
                 if (applySecurityInterceptors) {
                     boolean isMethodIntercepted = interceptedMethods.containsKey(endpointImpl);
                     if (isMethodIntercepted) {
                         return createEagerSecCustomizerWithInterceptor(interceptedMethods, endpointImpl, method, endpointImpl,
-                                withDefaultSecurityCheck, applyAuthorizationPolicy, permsAllowedMetaAnnotationItem);
+                                withDefaultSecurityCheck, applyAuthorizationPolicy, permsAllowedMetaAnnotationItem,
+                                securityTransformer);
                     } else {
                         isMethodIntercepted = interceptedMethods.containsKey(method);
                         if (isMethodIntercepted && !endpointImpl.equals(method)) {
                             return createEagerSecCustomizerWithInterceptor(interceptedMethods, method, method, endpointImpl,
-                                    withDefaultSecurityCheck, applyAuthorizationPolicy, permsAllowedMetaAnnotationItem);
+                                    withDefaultSecurityCheck, applyAuthorizationPolicy, permsAllowedMetaAnnotationItem,
+                                    securityTransformer);
                         }
                     }
                 }
                 return List.of(newEagerSecurityHandlerCustomizerInstance(method, endpointImpl, withDefaultSecurityCheck,
-                        applyAuthorizationPolicy, permsAllowedMetaAnnotationItem));
+                        applyAuthorizationPolicy, permsAllowedMetaAnnotationItem, securityTransformer));
             }
         });
     }
 
     private static boolean shouldApplyAuthZPolicy(MethodInfo method, MethodInfo endpointImpl,
-            AuthorizationPolicyInstancesBuildItem item) {
-        return item.applyAuthorizationPolicy(method) || item.applyAuthorizationPolicy(endpointImpl);
+            SecurityTransformer securityTransformer) {
+        if (securityTransformer.hasSecurityAnnotation(method, AUTHORIZATION_POLICY)
+                || securityTransformer.hasSecurityAnnotation(endpointImpl, AUTHORIZATION_POLICY)) {
+            return true;
+        }
+        // currently, we do not support combining security checks and authorization policy annotations
+        // so the most specific wins
+        if (securityTransformer.hasSecurityAnnotation(method, SECURITY_CHECK)
+                || securityTransformer.hasSecurityAnnotation(endpointImpl, SECURITY_CHECK)) {
+            return false;
+        }
+
+        // if they inherit class-level annotation
+        if (securityTransformer.hasSecurityAnnotation(method.declaringClass(), AUTHORIZATION_POLICY)) {
+            return true;
+        }
+        return securityTransformer.hasSecurityAnnotation(endpointImpl.declaringClass(), AUTHORIZATION_POLICY);
     }
 
     private static List<HandlerChainCustomizer> createEagerSecCustomizerWithInterceptor(
             Map<MethodInfo, Boolean> interceptedMethods, MethodInfo method, MethodInfo originalMethod, MethodInfo endpointImpl,
             boolean withDefaultSecurityCheck, boolean applyAuthorizationPolicy,
-            PermissionsAllowedMetaAnnotationBuildItem permsAllowedMetaAnnotationItem) {
+            PermissionsAllowedMetaAnnotationBuildItem permsAllowedMetaAnnotationItem,
+            SecurityTransformer securityTransformer) {
         var requiresSecurityCheck = interceptedMethods.get(method);
         final HandlerChainCustomizer eagerSecCustomizer;
         if (requiresSecurityCheck && !applyAuthorizationPolicy) {
@@ -1773,20 +1840,23 @@ public class ResteasyReactiveProcessor {
             eagerSecCustomizer = new HttpPermissionsAndSecurityChecksCustomizer();
         } else {
             eagerSecCustomizer = newEagerSecurityHandlerCustomizerInstance(originalMethod, endpointImpl,
-                    withDefaultSecurityCheck, applyAuthorizationPolicy, permsAllowedMetaAnnotationItem);
+                    withDefaultSecurityCheck, applyAuthorizationPolicy, permsAllowedMetaAnnotationItem,
+                    securityTransformer);
         }
         return List.of(EagerSecurityInterceptorHandler.Customizer.newInstance(), eagerSecCustomizer);
     }
 
     private static HandlerChainCustomizer newEagerSecurityHandlerCustomizerInstance(MethodInfo method, MethodInfo endpointImpl,
             boolean withDefaultSecurityCheck, boolean applyAuthorizationPolicy,
-            PermissionsAllowedMetaAnnotationBuildItem permsAllowedMetaAnnotationItem) {
+            PermissionsAllowedMetaAnnotationBuildItem permsAllowedMetaAnnotationItem,
+            SecurityTransformer securityTransformer) {
         if (applyAuthorizationPolicy) {
             // @AuthorizationPolicy and possibly authorization using configuration
             return new AuthZPolicyCustomizer();
         }
         if (withDefaultSecurityCheck
-                || consumesStandardSecurityAnnotations(method, endpointImpl, permsAllowedMetaAnnotationItem)) {
+                || consumesStandardSecurityAnnotations(method, endpointImpl, permsAllowedMetaAnnotationItem,
+                        securityTransformer)) {
             // standard security annotation and possibly authorization using configuration
             return new HttpPermissionsAndSecurityChecksCustomizer();
         }
@@ -1859,25 +1929,27 @@ public class ResteasyReactiveProcessor {
     }
 
     private static boolean consumesStandardSecurityAnnotations(MethodInfo methodInfo, MethodInfo endpointImpl,
-            PermissionsAllowedMetaAnnotationBuildItem permsAllowedMetaAnnotationItem) {
+            PermissionsAllowedMetaAnnotationBuildItem permsAllowedMetaAnnotationItem,
+            SecurityTransformer securityTransformer) {
         // invoked method
-        if (consumesStandardSecurityAnnotations(endpointImpl, permsAllowedMetaAnnotationItem)) {
+        if (consumesStandardSecurityAnnotations(endpointImpl, permsAllowedMetaAnnotationItem, securityTransformer)) {
             return true;
         }
 
         // fallback to original behavior
         return !endpointImpl.equals(methodInfo)
-                && consumesStandardSecurityAnnotations(methodInfo, permsAllowedMetaAnnotationItem);
+                && consumesStandardSecurityAnnotations(methodInfo, permsAllowedMetaAnnotationItem, securityTransformer);
     }
 
     private static boolean consumesStandardSecurityAnnotations(MethodInfo methodInfo,
-            PermissionsAllowedMetaAnnotationBuildItem permsAllowedMetaAnnotationItem) {
-        boolean hasMethodLevelSecurityAnnotation = SecurityTransformerUtils.hasSecurityAnnotation(methodInfo)
+            PermissionsAllowedMetaAnnotationBuildItem permsAllowedMetaAnnotationItem,
+            SecurityTransformer securityTransformer) {
+        boolean hasMethodLevelSecurityAnnotation = securityTransformer.hasSecurityAnnotation(methodInfo, SECURITY_CHECK)
                 || permsAllowedMetaAnnotationItem.hasPermissionsAllowed(methodInfo);
         if (hasMethodLevelSecurityAnnotation) {
             return true;
         }
-        if (HttpSecurityUtils.hasAuthorizationPolicyAnnotation(methodInfo)) {
+        if (securityTransformer.hasSecurityAnnotation(methodInfo, AUTHORIZATION_POLICY)) {
             // security annotations cannot be combined
             // and the most specific wins, so if we have both class-level security check
             // and the method-level @AuthorizationPolicy, the policy wins as it is more specific
@@ -1886,7 +1958,7 @@ public class ResteasyReactiveProcessor {
             // on a method level thanks to validation
             return false;
         }
-        return SecurityTransformerUtils.hasSecurityAnnotation(methodInfo.declaringClass())
+        return securityTransformer.hasSecurityAnnotation(methodInfo.declaringClass(), SECURITY_CHECK)
                 || permsAllowedMetaAnnotationItem.hasPermissionsAllowed(methodInfo.declaringClass());
     }
 
