@@ -5,7 +5,6 @@ import static io.quarkus.arc.processor.Annotations.contains;
 import java.lang.reflect.Modifier;
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
 import java.util.ListIterator;
@@ -107,7 +106,7 @@ public class InjectionPointInfo {
         return injectionPoints;
     }
 
-    static InjectionPointInfo fromSyntheticInjectionPoint(TypeAndQualifiers typeAndQualifiers) {
+    public static InjectionPointInfo fromSyntheticInjectionPoint(TypeAndQualifiers typeAndQualifiers) {
         return new InjectionPointInfo(typeAndQualifiers, InjectionPointKind.CDI, null, null, false, false);
     }
 
@@ -134,7 +133,7 @@ public class InjectionPointInfo {
     InjectionPointInfo(Type requiredType, Set<AnnotationInstance> requiredQualifiers, InjectionPointKind kind,
             AnnotationTarget target, AnnotationTarget methodParameterTarget, boolean isTransientReference, boolean isDelegate) {
         this(new TypeAndQualifiers(requiredType, requiredQualifiers.isEmpty()
-                ? Collections.singleton(AnnotationInstance.create(DotNames.DEFAULT, null, Collections.emptyList()))
+                ? Set.of(BuiltinQualifier.DEFAULT.getInstance())
                 : requiredQualifiers),
                 kind, target, methodParameterTarget, isTransientReference, isDelegate);
     }
@@ -412,7 +411,7 @@ public class InjectionPointInfo {
 
         public TypeAndQualifiers(Type type, Set<AnnotationInstance> qualifiers) {
             this.type = type;
-            this.qualifiers = qualifiers;
+            this.qualifiers = Unique.annotations(qualifiers);
         }
 
         @Override
