@@ -6,9 +6,9 @@ import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
 import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
+import java.util.Map.Entry;
 import java.util.Set;
 import java.util.function.BiFunction;
 
@@ -20,7 +20,7 @@ public final class Qualifiers {
 
     public static final Set<Annotation> DEFAULT_QUALIFIERS = Set.of(Default.Literal.INSTANCE, Any.Literal.INSTANCE);
 
-    public static final Set<Annotation> IP_DEFAULT_QUALIFIERS = Collections.singleton(Default.Literal.INSTANCE);
+    public static final Set<Annotation> IP_DEFAULT_QUALIFIERS = Set.of(Default.Literal.INSTANCE);
 
     final Set<String> allQualifiers;
     // custom qualifier -> non-binding members (can be empty but never null)
@@ -69,7 +69,9 @@ public final class Qualifiers {
 
     // in various cases, specification requires to check qualifiers for duplicates and throw IAE
     private static void checkQualifiersForDuplicates(Map<Class<? extends Annotation>, Integer> timesQualifierSeen) {
-        timesQualifierSeen.forEach(Qualifiers::checkQualifiersForDuplicates);
+        for (Entry<Class<? extends Annotation>, Integer> entry : timesQualifierSeen.entrySet()) {
+            checkQualifiersForDuplicates(entry.getKey(), entry.getValue());
+        }
     }
 
     private static void checkQualifiersForDuplicates(Class<? extends Annotation> aClass, Integer times) {
